dynamic list is added as per category click in vaadin